--- a/index.html
+++ b/index.html
@@ -19,37 +19,78 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="solarcv" class="anchor" href="#solarcv" aria-hidden="true"><span class="octicon octicon-link"></span></a>SolarCV</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>CV template, written in LaTeX, based on <a href="https://github.com/afriggeri/cv">Adrien Friggeri CV</a>,
+slighty modified to use <a href="https://github.com/altercation/solarized">Ethan Schoonover Solarized color palette</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Solarized is provided by <a href="https://github.com/Jubobs" class="user-mention">@Jubobs</a> <a href="https://github.com/Jubobs/xcolor-solarized">xcolor-solarized</a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p><img src="https://github.com/antenore/solarcv/blob/master/img/Screenshot_2015-05-15_17-43-33.png" alt="SolarCV screenshot"><br>
+<img src="https://github.com/antenore/solarcv/blob/master/img/Screenshot_BlackAndWhite.png" alt="SolarCV Black&amp;White"></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<ul>
+<li>Most of the Friggeri features</li>
+<li>Portrait picture</li>
+<li>Solarized color palette</li>
+<li>PDF metadata (with my copyright, can be modified as per CC BY-SA 3.0)</li>
+</ul>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<h2>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><em>LaTeX packages</em></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>babel</li>
+<li>biblatex</li>
+<li>blindtext</li>
+<li>enumitem</li>
+<li>changepage</li>
+<li>fancyhdr</li>
+<li>fontspec</li>
+<li>geometry</li>
+<li>graphicx</li>
+<li>hyperref</li>
+<li>hyperxmp</li>
+<li>longtable</li>
+<li>parskip</li>
+<li>tabu</li>
+<li>textpos</li>
+<li>tikz</li>
+<li>unicode-math</li>
+<li><a href="https://github.com/Jubobs/xcolor-solarized">xcolor-solarized</a></li>
+</ul>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h2>
+<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h2>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li>Modify the cv-config.tex file with your personal details.</li>
+<li>Modify solarcv.cls and set your favorite fonts, you will need a Math font for LaTeX symbols.</li>
+<li>Install all the TeX packages that are required (see the cls files for a list).</li>
+<li>Modify the SolarCV.tex file and adapt to your paper size</li>
+<li>Modify each file under tex directory and substitue each '\blind*' text to
+ your needs.</li>
+<li>Put a photo of yourself under img (FirstnameLastname.png)</li>
+<li>
+<p>Build it --&gt;</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<div class="highlight highlight-bash"><pre>make clean
+make
+make display</pre></div>
+</li>
+</ul>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p><img src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" alt="Creative Commons License">
+This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/antenore/solarcv">Solarcv</a> is maintained by <a href="https://github.com/antenore">antenore</a>.</span>
